# calendar-club-prototype

./: .env.example  .gitattributes  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  TECHSTACK.md  conftest.py  docker-compose.yml  package.json  pyproject.toml  requirements.txt  vercel.json
.beads/: issues.jsonl
.next/: trace  trace-build
api/: .env.example  __init__.py  config.py  conftest.py  conversations.db  conversations.db-shm  conversations.db-wal  index.py
api/agents/: __init__.py  clarifying.py  orchestrator.py  search.py
api/agents/tests/: __init__.py  test_orchestrator.py  test_prompts.py  test_search.py
api/cli/: __init__.py  scrape.py
api/models/: __init__.py  conversation.py  events.py  orchestrator.py  search.py
api/services/: __init__.py  background_tasks.py  base.py  calendar.py  event_cache.py  eventbrite.py  exa_client.py  exa_research.py  firecrawl.py  firecrawl_agent.py  google_calendar.py  meetup.py  msgraph.py  session.py  sse_connections.py  temporal.py  temporal_parser.py  turso_session.py
api/services/tests/: __init__.py  test_event_cache.py  test_live_sources.py  test_meetup.py  test_session.py  test_temporal_parser.py  test_turso_session.py
api/tests/: __init__.py  test_api.py  test_index.py
backend/: __init__.py  main.py
backend/agents/: __init__.py  clarifying.py  search.py
backend/models/: __init__.py  search.py
backend/services/: __init__.py  session.py
frontend/: .env.local.example  .gitignore  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/week/: page.tsx
frontend/src/components/: PostHogProvider.tsx  TelemetryProvider.tsx
frontend/src/lib/: api.ts  debug.ts  hooks.ts  posthog.ts  query-provider.tsx  telemetry.ts  utils.ts
frontend/src/styles/: globals.css
thoughts/shared/plans/: 2026-01-09-phase0-ux-spec.md  2026-01-09-production-readiness-implementation.md  2026-01-11-calendar-fixes-and-sheet-overlay.md  2026-01-11-event-flow-logging.md  2026-01-11-event-source-registry-pattern.md  2026-01-11-exa-firecrawl-sdk-migration.md  2026-01-11-exa-websets-integration.md  2026-01-11-extraction-schema-improvements.md  2026-01-11-firecrawl-event-source-integration.md  2026-01-11-firecrawl-integration.md  2026-01-11-live-integration-tests.md  2026-01-11-meetup-graphql-integration.md  2026-01-11-orchestrator-agent-architecture.md
throughts/plans/: 2026-01-09-llm-productionization.md
throughts/research/: Architecture for a deep event discovery agent.md  Blueprint for an End-to-End Events Agent.md  Deep‑Research Agent Architecture for Events.md  Designing Network Effects into Local Calendars.md  Designing intent graphs for event discovery.md  Embedding temporal reasoning into Calendar Club.md  Making Event Data Play Nicely Together.md  Safe Polling and Ranking for Event Crawlers.md  Schema Patterns for Event Discovery Agents.md  Source‑Aware RAG Strategy for Event Feeds.md
(+60 files in other folders)
